feat: diseño de vista

--- a/src/app/pages/peliculas/components/detalle-pelicula/detalle-pelicula.component.html
+++ b/src/app/pages/peliculas/components/detalle-pelicula/detalle-pelicula.component.html
@@ -1,1 +1,13 @@
-<p>detalle-pelicula works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Nombre</h5>
+                    <p class="card-text">Director</p>
+                    <p class="card-text">Clasificacion</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
