--- a/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
+++ b/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
@@ -1,1 +1,28 @@
-<p>form-pelicula works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-group">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                      </div>
+                      <div class="form-group">
+                        <label for="director">Director</label>
+                        <input type="text" class="form-control" id="director" placeholder="Director">
+                      </div>
+                      <div class="form-group">
+                        <label for="clasificacion">Clasificacion</label>
+                        <select class="form-control" id="clasificacion">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                          </select>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
