--- a/src/app/pages/peliculas/components/layout/layout.component.html
+++ b/src/app/pages/peliculas/components/layout/layout.component.html
@@ -1,1 +1,10 @@
-<p>layout works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <ngx-form-pelicula></ngx-form-pelicula>
+        </div>
+        <div class="col-6">
+            <ngx-peliculas></ngx-peliculas>
+        </div>
+    </div>
+</div>
