--- a/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
+++ b/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
@@ -3,15 +3,16 @@
         <div class="col">
             <div class="card">
                 <div class="card-body">
+                    <h5 class="card-title pb-2">Crear / Editar Pelicula</h5>
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Nombre">
-                      </div>
-                      <div class="form-group">
+                    </div>
+                    <div class="form-group">
                         <label for="director">Director</label>
                         <input type="text" class="form-control" id="director" placeholder="Director">
-                      </div>
-                      <div class="form-group">
+                    </div>
+                    <div class="form-group">
                         <label for="clasificacion">Clasificacion</label>
                         <select class="form-control" id="clasificacion">
                             <option>1</option>
@@ -19,8 +20,8 @@
                             <option>3</option>
                             <option>4</option>
                             <option>5</option>
-                          </select>
-                      </div>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
