--- a/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
+++ b/src/app/pages/peliculas/components/form-pelicula/form-pelicula.component.html
@@ -1,29 +1,33 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title pb-2">Crear / Editar Pelicula</h5>
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Nombre">
-                    </div>
-                    <div class="form-group">
-                        <label for="director">Director</label>
-                        <input type="text" class="form-control" id="director" placeholder="Director">
-                    </div>
-                    <div class="form-group">
-                        <label for="clasificacion">Clasificacion</label>
-                        <select class="form-control" id="clasificacion">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
+<form [formGroup]="PeliculaForm" *ngIf="PeliculaForm">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title pb-2">Crear / Editar Pelicula</h5>
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Nombre" formControlName="nombre">
+                        </div>
+                        <div class="form-group">
+                            <label for="director">Director</label>
+                            <input type="text" class="form-control" id="director" placeholder="Director" formControlName="director">
+                        </div>
+                        <div class="form-group">
+                            <label for="clasificacion">Clasificacion</label>
+                            <select class="form-control" id="clasificacion" formControlName="clasificacion">
+                                <option *ngFor="let clasificacion of Clasificaciones" [ngValue]="clasificacion">
+                                    {{clasificacion.nombre}}
+                                </option>
+                            </select>
+                        </div>
+                        <div class="d-flex justify-content-end pt-3">
+                            <button class="btn btn-primary" (click)="OnSubmit()">Guardar</button>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</form>
