--- a/src/app/pages/peliculas/components/peliculas/peliculas.component.html
+++ b/src/app/pages/peliculas/components/peliculas/peliculas.component.html
@@ -1,8 +1,8 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 pb-2" *ngFor="let items of [1,2,3]">
-            <ngx-detalle-pelicula></ngx-detalle-pelicula>
+        <div class="col-12 pb-2" *ngFor="let pelicula of Peliculas">
+            <ngx-detalle-pelicula [Pelicula]="pelicula"></ngx-detalle-pelicula>
         </div>
     </div>
 </div>
